fix color contrast issue identified by lighthouse & axe on challenges page

--- a/challenges/static/css/challenges.css
+++ b/challenges/static/css/challenges.css
@@ -21,7 +21,7 @@
 }
 
 .nav-tabs a.nav-link {
-    color: #034b98;
+    color: #0b2744;
     padding: .5rem;
 }
 
